--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "bootstrap": "^4.1.3",
+    "dotenv": "^6.1.0",
     "element-ui": "^2.4.7",
     "jquery": "^1.9.1",
     "node-sass": "^4.9.3",
